--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "tsx ./index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node_modules/.bin/nodemon index.js"
+    "dev": "node_modules/.bin/nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
