--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.6.1",
     "@types/pg": "^8.11.10",
